# kd_slam2

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md
kd_eval_tools/: CMakeLists.txt  package.xml
kd_eval_tools/src/: eval.cpp  eval.h  file_utils.cpp  file_utils.h  kitti2ros2bag.cpp  kitti_gt2tum.cpp  kitti_tum2poses.cpp  make_plots.gnuplot  traj_compare.cpp  trajectory.cpp  trajectory.h
kd_slam2/: CMakeLists.txt  package.xml
kd_slam2/configs/: dl.conf  kd_bundle2d_handeld.conf  kd_bundle2d_icp_handheld.conf  kd_bundle_drive.conf  kd_bundle_handheld.conf  kd_bundle_kitti.conf  kd_localize_drive.conf  kd_localize_handheld.conf  kd_odom_cticp_drive.conf  kd_odom_icp_drive.conf  kd_slam2d_icp_handheld.conf  kd_slam_cpu_cticp_drive.conf  kd_slam_cpu_cticp_drive_kitti.conf  kd_slam_cpu_cticp_handheld.conf  kd_slam_cpu_icp_drive.conf  kd_slam_cpu_icp_drive_kitti.conf  kd_slam_cpu_icp_handheld.conf  kd_slam_cticp_drive.conf  kd_slam_cticp_drive_kitti.conf  kd_slam_cticp_handheld.conf  kd_slam_icp_drive.conf  kd_slam_icp_drive_kitti.conf  kd_slam_icp_handheld.conf  make_cpu_confs.sh
kd_slam2/docs/: classes.dot  dataflow.dot
kd_slam2/src/apps/: CMakeLists.txt
kd_slam2/src/apps/nodes/: CMakeLists.txt  imu_replay.cpp  kd_app_common_.h  kd_bundler.cpp  kd_converter.cpp  kd_livox_converter.cpp  kd_localizer.cpp  kd_map_replay.cpp  kd_slam.cpp  zuppo_to_mcap.cpp
kd_slam2/src/apps/tests/: CMakeLists.txt
kd_slam2/src/apps/tests/cticp/: CMakeLists.txt  kd_cticp_main.cpp
kd_slam2/src/apps/tests/descriptors/: CMakeLists.txt  kd_descriptors_main.cpp  kdtree2descriptor.cpp  plot_distances.py  plot_pr_curve.py
kd_slam2/src/apps/tests/icp/: CMakeLists.txt  kd_icp_main.cpp
kd_slam2/src/apps/tests/jacobians/: CMakeLists.txt  motion_jacobian_2d_test.cpp  motion_jacobian_3d_test.cpp  pose_error_jacobian_2d_test.cpp  pose_error_jacobian_3d_test.cpp
kd_slam2/src/apps/tests/misc/: CMakeLists.txt  command_line_test.cpp  kd_stamp_main.cpp
kd_slam2/src/lib/: CMakeLists.txt  instances_2d.cpp  instances_2d.h  instances_3d.cpp  instances_3d.h  kd_slam_cuda_init.cu
kd_slam2/src/lib/kd_io/: CMakeLists.txt  kd_map_io_.h  kd_state_reader.cpp  kd_state_reader_.h  kd_state_writer.cpp  kd_state_writer_.h  kd_tum_writer.cpp  kd_tum_writer_.h  message_reader.h  message_writer.h  reader_factory.cpp  reader_factory.h  rosbag2_message_reader.cpp  rosbag2_message_reader.h  rosbag2_message_writer.cpp  rosbag2_message_writer.h  scan_utils.cpp  scan_utils_.h  scan_utils_impl_.h  slam_message_data.h  slam_messages.h  tree_loader_.h  tree_loader_2d.cpp  tree_loader_3d.cpp  tree_loader_impl_.h  tum_io.cpp  tum_io.h  write_isometry_.h
kd_slam2/src/lib/kd_slam/: CMakeLists.txt
kd_slam2/src/lib/kd_slam/bundler/: bundler_proc_.h  bundler_proc_bits_impl_.h  bundler_proc_bundle_impl_.h  bundler_proc_bundlect_impl_.h  bundler_proc_cure_impl_.h  bundler_proc_helpers_impl_.h  bundler_proc_impl_.h
kd_slam2/src/lib/kd_slam/cticp/: cticp_.h  cticp_cpu_.h  cticp_cpu_impl_.h  cticp_cuda_.h  cticp_cuda_impl_.cuh  cticp_impl_.h
kd_slam2/src/lib/kd_slam/cuda/: cuda_common.h  prefix_sum.cu  prefix_sum_.h  prefix_sum_impl_.cuh  reduce_.h  reduce_impl_.cuh
kd_slam2/src/lib/kd_slam/d2/: CMakeLists.txt  cticp.cpp  cticp.cu  cticp_.h  cticp_cuda_.h  cticp_impl_.h  descriptor.cpp  descriptor.cu  icp.cpp  icp.cu  icp_.h  icp_cuda_.h  instances_cpu.cpp  instances_cuda.cpp  instances_tree.cpp  scanner.cpp  scanner.h  slam.cpp  slam.h  tree.cpp  tree.cu  typedefs.cpp  typedefs.cuh  typedefs.h
kd_slam2/src/lib/kd_slam/d3/: CMakeLists.txt  cticp.cpp  cticp.cu  cticp_.h  cticp_impl_.h  descriptor.cpp  descriptor.cu  icp.cpp  icp.cu  icp_.h  instances_cpu.cpp  instances_cuda.cpp  scanner.cpp  scanner.h  slam.cpp  slam.h  slam_gravity_prior_factor.cpp  slam_gravity_prior_factor.h  tree.cpp  tree.cu  typedefs.cpp  typedefs.cuh  typedefs.h
kd_slam2/src/lib/kd_slam/descriptor/: descriptor_.h  descriptor_defs.h  descriptor_impl_.h  descriptors_cpu.cpp  descriptors_cuda.cu  extractor_.h  extractor_impl_.h  matcher_.h  matcher_cpu_.h  matcher_cpu_impl_.h  matcher_cuda_.cuh  matcher_cuda_impl_.cuh
kd_slam2/src/lib/kd_slam/event/: CMakeLists.txt  event.h  event_dispatcher.cpp  event_dispatcher.h  event_logger.h  event_queue.cpp  event_queue.h
kd_slam2/src/lib/kd_slam/frame/: CMakeLists.txt  factor_base.cpp  factor_base.h  frame_base.cpp  frame_base.h  frame_consumer_base.h  frame_graph.cpp  frame_graph.h  frame_queue_base.cpp  frame_queue_base.h  frame_queue_bounded.h  frame_queue_sorted.h  frame_queue_sorting.cpp  frame_queue_sorting.h  frame_tree_.h
kd_slam2/src/lib/kd_slam/icp/: icp_.h  icp_cpu_.h  icp_cpu_impl_.h  icp_cuda_.h  icp_cuda_impl_.cuh  icp_impl_.h  icp_stats_.h  icp_ws_item_.h  tree_aligner_base_.h
kd_slam2/src/lib/kd_slam/localizer/: localizer_proc_.h  localizer_proc_bits_impl_.h  localizer_proc_frame_impl_.h  localizer_proc_impl_.h
kd_slam2/src/lib/kd_slam/map/: frame_match_.h  frame_match_impl_.h  map_.h  map_align_utils_.h  map_common.h  map_event_.h  map_frame_collector_.h  map_frame_collector_impl_.h  map_impl_.h  map_owner_.h  map_owner_impl_.h  map_traits_.h  multiview_cticp_factor_.h  multiview_cticp_factor_impl_.h  multiview_icp_factor_.h  multiview_icp_factor_impl_.h  velocity_prior_factor_.h  velocity_prior_factor_impl_.h
kd_slam2/src/lib/kd_slam/motion_model/: CMakeLists.txt  const_vel_motion_model_.h  imu_motion_model_.h  imu_motion_model_impl_.h  odometry_motion_model_.h  pose_integrator.cpp  pose_integrator.h
kd_slam2/src/lib/kd_slam/optimizer/: optimizer_proc_.h  (+3 more)
kd_slam2/src/lib/kd_viewer/: CMakeLists.txt  camera_pose_vbo.cpp  camera_pose_vbo.h  cloud_vbo.cpp  cloud_vbo.h  drawable_base.cpp  drawable_base.h  drawable_kd_cloud.cpp  drawable_kd_cloud.h  drawable_kd_slam.cpp  drawable_kd_slam_.h  glfw_viewer.cpp  glfw_viewer.h  kd_viewer.cpp  kd_viewer.h  line_segments_vbo.cpp  line_segments_vbo.h  palette.h  vbo_base.cpp  vbo_base.h
kd_slam2_msgs/: CMakeLists.txt  package.xml
kd_slam2_msgs/msg/: KDDescriptor.msg  KDNode2f.msg  KDNode3f.msg  KDTree2f.msg  KDTree3f.msg
(+66 files in other folders)
