<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kd_slam2</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="grisetti@dis.uniroma1.it">giorgio</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>srrg_cmake_modules</depend>
  <depend>srrg2_core</depend>
  <depend>srrg2_solver</depend>
  <depend>srrg2_solver_extras</depend>
  <depend>kd_slam2_msgs</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
