add_executable(kd_stamp_3d_test kd_stamp_main.cpp)
target_compile_definitions(kd_stamp_3d_test PRIVATE _THREE_DIMENSIONS_)
target_link_libraries(kd_stamp_3d_test kd_slam_scanner_3d kd_slam_icp_3d kd_io)

add_executable(kd_stamp_2d_test kd_stamp_main.cpp)
target_compile_definitions(kd_stamp_2d_test PRIVATE _TWO_DIMENSIONS_)
target_link_libraries(kd_stamp_2d_test kd_slam_scanner_2d kd_slam_icp_2d  kd_io)
